11 June 2007
+ Added audio thumbnail
+ Updated files: img/audio.png

8 June 2007
+ Added audio filter for mp3
+ Wrote update scripts.
+ Added missing new columns to image table in install.sql
+ Added multimedia.sql file for update to 1.1.0
+ Added ability to delete incoming files.
+ Added directory permission checks to classify.
+ Classify directory can now be set in fc settings.
+ Created classify override in config.php file.
+ Updated files: conf/config.php, templates/settings.tpl
+ Updated locale file.


7 June 2007
+ Removing the embedded code. Decided it wasn't useful.

6 June 2007
+ Started embedded functionality code.
+ Updated files: conf/embedded.php, templates/edit_embed.tpl,
                 templates/embedded.tpl,
                 templates/embedded/youtube.tpl


1 June 2007
+ Added link to delete multimedia files
+ Added edit link for multimedia files
+ Thumbnails now clickable to open video in popup window.
+ Tidy in Image.php
+ Updated files: config/config.php, templates/image_view.tpl,
                 templates/multimedia_view.tpl,
+ Removed view.tpl


31 May 2007
+ Added option to use ffmpeg to create thumbnails
+ Restructured settings form.
+ Updated files: templates/settings.tpl

30 May 2007 
+ Added the ability to clip multimedia files to content.
+ Added multimedia max upload size to settings.
+ getTag function works in the Multimedia class for flash video files.
+ Updated files: templates/settings.tpl, templates/filters/flash.tpl,
                 entire filters/flash/ directory. 


29 May 2007
>> NON-DEVELOPERS!!! DO NOT UPDATE STABLE CODE WITH CHANGES! <<

+ Added Multimedia folders
+ Added Multimedia files.
+ Added ability to classify uploaded files.
+ Removed itemname variable from Document_Manager
+ Created setDirectory function for File_Common. Assures trailing
  forward slash on directory name.
+ Commented out ext variable in File_Common. Doesn't appear to be in
  use.
+ Fixed some error messages in File_Common.