@@ -14,7 +14,7 @@ define('FC_VIEW_MARGIN_HEIGHT', 100);
 define('FC_UPLOAD_WIDTH', 450);
 define('FC_UPLOAD_HEIGHT', 450);
 
-define('FC_NONE_IMAGE_SRC', 'images/mod/filecabinet/none.png');
+define('FC_NONE_IMAGE_SRC', 'images/mod/filecabinet/no_image.png');
 
 define('FC_MAX_IMAGE_POPUP_WIDTH', 1024);
 define('FC_MAX_IMAGE_POPUP_HEIGHT', 768);
